--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,17 +5,20 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  font-family: var(--font-roboto), sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #e3dcd5;
+    --foreground: #000000;
+    
   }
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-roboto), sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
 }
